--- a/pin_config.yaml
+++ b/pin_config.yaml
@@ -1,4 +1,6 @@
-
+# IMPORTANT!
+# DO NOT EDIT UNLESS YOU ARE INSTALLING A NEW "PLUG BOARD" FOR THE PICK BY LIGHT SETUP 
+# THESE PINS FIXED AND ARE NOT NOMALLY CHANGED IN A RECONFIGURATION SCENARIO: 
 1:
   led_pin : 21
   pir_pin : 20
