--- a/box_config.yaml
+++ b/box_config.yaml
@@ -1,19 +1,19 @@
 1:
-  box_name : upper_left
+  name : upper_left
   content_id : 300424
   content_count : 100
 
 2:
-  box_name : upper_right
+  name : upper_right
   content_id : 302121
   content_count : 100
 
 3:
-  box_name : lower_left
+  name : lower_left
   content_id : 300124
   content_count : 100
 
 4:
-  box_name : lower_right
+  name : lower_right
   content_id : 300324
   content_count : 100
