--- a/pin_config.yaml
+++ b/pin_config.yaml
@@ -1,6 +1,6 @@
 # IMPORTANT!
 # DO NOT EDIT UNLESS YOU ARE INSTALLING A NEW "PLUG BOARD" FOR THE PICK BY LIGHT SETUP 
-# THESE PINS FIXED AND ARE NOT NOMALLY CHANGED IN A RECONFIGURATION SCENARIO: 
+# THESE PINS ARE FIXED AND ARE NOT NOMALLY CHANGED IN A RECONFIGURATION SCENARIO: 
 1:
   led_pin : 35
   pir_pin : 36
