--- a/box_config.yaml
+++ b/box_config.yaml
@@ -1,19 +1,29 @@
 1:
   name : upper_left
   content_id : 300424
-  content_count : 100
+  quantity : 100
 
 2:
   name : upper_right
   content_id : 302121
-  content_count : 100
+  quantity : 100
 
 3:
   name : lower_left
   content_id : 300124
-  content_count : 100
+  quantity : 100
 
 4:
   name : lower_right
   content_id : 300324
-  content_count : 100
+  quantity : 100
+
+5:
+  name : lower_right
+  content_id : 300324
+  quantity : 100
+
+6:
+  name : lower_right
+  content_id : 300324
+  quantity : 100
