--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,7 @@
 {
     "python.pythonPath": "/usr/bin/python3",
-    "editor.fontSize": 12
+    "editor.fontSize": 12,
+    "cSpell.words": [
+        "yamlfile"
+    ]
 }
