--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "python.pythonPath": "/usr/bin/python3",
     "editor.fontSize": 12,
     "cSpell.words": [
+        "Festo",
         "yamlfile"
     ]
 }
