--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "/usr/local/bin/python3",
+    "python.pythonPath": "C:\\Program Files\\Python38\\python.exe",
     "editor.fontSize": 12,
     "cSpell.words": [
         "itertools",
