--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "python.pythonPath": "C:\\Program Files\\Python38\\python.exe",
     "editor.fontSize": 12,
     "cSpell.words": [
+        "festo",
         "itertools",
         "packml",
         "yamlfile"
